--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -81,12 +81,12 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;OpenCL.lib;OpenGL32.lib;glm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;SOIL-d.lib;OpenCL.lib;OpenGL32.lib;glm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
