We don't need SDL_image now that we're using SOIL

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ Release/
 *.dotCover
 *.tlog
 *.lastbuildstate
+*.unsuccessfulbuild
 *.idb
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
