--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -86,7 +86,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SDL_image.lib;SOIL-d.lib;OpenCL.lib;OpenGL32.lib;glm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL-d.lib;OpenCL.lib;OpenGL32.lib;glm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
