--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -11,39 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\glcamera.cpp" />
-    <ClCompile Include="..\src\glfunctions.cpp" />
-    <ClCompile Include="..\src\glprogram.cpp" />
-    <ClCompile Include="..\src\glshader.cpp" />
-    <ClCompile Include="..\src\gltexture.cpp" />
-    <ClCompile Include="..\src\glvertexarray.cpp" />
-    <ClCompile Include="..\src\glvertexbuffer.cpp" />
-    <ClCompile Include="..\src\handle.cpp" />
-    <ClCompile Include="..\src\input.cpp" />
     <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\material.cpp" />
-    <ClCompile Include="..\src\model.cpp" />
-    <ClCompile Include="..\src\timer.cpp" />
     <ClCompile Include="..\src\tinycl.cpp" />
-    <ClCompile Include="..\src\util.cpp" />
-    <ClCompile Include="..\src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\glcamera.h" />
-    <ClInclude Include="..\src\glfunctions.h" />
-    <ClInclude Include="..\src\glprogram.h" />
-    <ClInclude Include="..\src\glshader.h" />
-    <ClInclude Include="..\src\gltexture.h" />
-    <ClInclude Include="..\src\glvertexarray.h" />
-    <ClInclude Include="..\src\glvertexbuffer.h" />
-    <ClInclude Include="..\src\handle.h" />
-    <ClInclude Include="..\src\input.h" />
-    <ClInclude Include="..\src\material.h" />
-    <ClInclude Include="..\src\model.h" />
-    <ClInclude Include="..\src\timer.h" />
     <ClInclude Include="..\src\tinycl.h" />
     <ClInclude Include="..\src\util.h" />
-    <ClInclude Include="..\src\window.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCTargetsPath Condition="'$(VCTargetsPath11)' != '' and '$(VSVersion)' == '' and '$(VisualStudioVersion)' == ''">$(VCTargetsPath11)</VCTargetsPath>
@@ -81,12 +54,12 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Will\Documents\Programs\OpenCL-OpenGL-Interop\OpenGL-Wrapper\include;C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL-d.lib;OpenCL.lib;OpenGL32.lib;glm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL-d.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -96,11 +69,15 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <AdditionalIncludeDirectories>C:\Users\Will\Documents\Programs\OpenCL-OpenGL-Interop\OpenGL-Wrapper\include;C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
