--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -69,13 +69,13 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>C:\Users\Will\Documents\Programs\OpenCL-OpenGL-Interop\OpenGL-Wrapper\include;C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/OpenGL-Wrapper/include;C:\SOIL\include;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\include;C:\glm-0.9.4.1;C:\OpenCL\include;C:\SDL-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v5.0\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\OpenCL\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
