--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -75,7 +75,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\Program Files %28x86%29\Intel\OpenCL SDK\3.0\lib\x86;C:\glm-0.9.4.1\bin;C:\OpenCL\lib\Win32;C:\SDL-2.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\glm-0.9.4.1\bin;C:\SDL-2.0\lib;C:\OpenCL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
