--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -70,14 +70,14 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(SolutionDir)/OpenGL-Wrapper/include;C:\SOIL\include;C:\glm-0.9.4.1;C:\SDL-2.0\include;C:\OpenCL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\glew-1.9.0\include;$(SolutionDir)/OpenGL-Wrapper/include;C:\SOIL\include;C:\glm-0.9.4.1;C:\SDL-2.0\include;C:\OpenCL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(OutDir);C:\SOIL\lib;C:\glm-0.9.4.1\bin;C:\SDL-2.0\lib;C:\OpenCL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;OpenGL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\glew-1.9.0\lib;$(OutDir);C:\SOIL\lib;C:\glm-0.9.4.1\bin;C:\SDL-2.0\lib;C:\OpenCL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL.lib;SDLmain.lib;SOIL.lib;glm.lib;OpenGL-Wrapper.lib;OpenCL.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
