--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj
@@ -13,11 +13,13 @@
   <ItemGroup>
     <ClCompile Include="..\src\demos.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\simplefluid.cpp" />
     <ClCompile Include="..\src\sparsematrix.cpp" />
     <ClCompile Include="..\src\tinycl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\demos.h" />
+    <ClInclude Include="..\src\simplefluid.h" />
     <ClInclude Include="..\src\sparsematrix.h" />
     <ClInclude Include="..\src\tinycl.h" />
   </ItemGroup>
