--- a/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj.filters
+++ b/OpenCL OpenGL Interop/OpenCL OpenGL Interop.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\src\sparsematrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\simplefluid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\tinycl.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\sparsematrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\simplefluid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
